--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div style="width: 1280px; height: 2294px; position: relative">
     <div style="width: 1280px; height: 2294px; left: 0px; top: 0px; position: absolute; background: #121B24; overflow: hidden">
-      <img style="width: 1280px; height: 832px; left: 0px; top: 0px; position: absolute" src="/Images/img3.jpg" />
+      <img style="width: 1280px; height: 832px; left: 0px; top: 0px; position: absolute" src="/Images/home_img1.jpg" />
       <div style="width: 1093px; height: 0px; left: 93px; top: 67px; position: absolute; outline: 1px white solid; outline-offset: -0.50px"></div>
       <div style="width: 1093px; height: 0px; left: 93px; top: 922px; position: absolute; outline: 1px white solid; outline-offset: -0.50px"></div>
       <div style="width: 45px; height: 14px; left: 423px; top: 45px; position: absolute">
