--- a/signin.html
+++ b/signin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="signin_styles.css">
 </head>
 <body>
     <div class="container">
