--- a/contactus.html
+++ b/contactus.html
@@ -4,302 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Travel Website</title>
-    <style>
-        /* Reset and base styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
-        }
-
-        body {
-            background-color: #f5f5f5;
-            color: #333;
-            line-height: 1.6;
-            background-image: url('https://images.unsplash.com/photo-1580979870239-62e3b679b8e5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80');
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            position: relative;
-        }
-
-        /* Navigation */
-        .nav-container {
-            background-color: rgba(70, 130, 180, 0.7);
-            padding: 15px 0;
-            text-align: center;
-        }
-
-        .nav-links {
-            display: flex;
-            justify-content: center;
-            list-style: none;
-            max-width: 1000px;
-            margin: 0 auto;
-            position: relative;
-        }
-
-        .nav-links li {
-            margin: 0 15px;
-        }
-
-        .nav-links a {
-            color: white;
-            text-decoration: none;
-            font-size: 16px;
-            transition: color 0.3s ease;
-            padding: 5px 10px;
-        }
-
-        .nav-links a:hover {
-            color: #f5f5f5;
-            border-bottom: 2px solid white;
-        }
-
-        .search-icon {
-            position: absolute;
-            right: 0;
-            color: white;
-            font-size: 18px;
-            cursor: pointer;
-        }
-
-        /* Contact Container */
-        .contact-container {
-            max-width: 1000px;
-            margin: 50px auto;
-            display: flex;
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-        }
-
-        /* Left Section - Contact Information */
-        .contact-info {
-            width: 40%;
-            background-color: #0f1923;
-            color: white;
-            padding: 40px;
-            position: relative;
-        }
-
-        .contact-info h2 {
-            font-size: 32px;
-            margin-bottom: 60px;
-        }
-
-        .contact-detail {
-            display: flex;
-            align-items: center;
-            margin-bottom: 30px;
-        }
-
-        .contact-icon {
-            margin-right: 15px;
-            width: 20px;
-        }
-
-        .contact-text {
-            font-size: 16px;
-        }
-
-        /* Social Media Links */
-        .social-media {
-            display: flex;
-            position: absolute;
-            bottom: 40px;
-        }
-
-        .social-icon {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background-color: #fff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-right: 15px;
-            transition: all 0.3s ease;
-        }
-
-        .social-icon img {
-            width: 20px;
-            height: 20px;
-        }
-
-        .social-icon:hover {
-            transform: translateY(-5px);
-        }
-
-        /* Circle Decoration */
-        .circle-decoration {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            background-color: rgba(255, 255, 255, 0.1);
-            position: absolute;
-            bottom: 160px;
-            right: 20px;
-        }
-
-        /* Right Section - Contact Form */
-        .contact-form {
-            width: 60%;
-            padding: 40px;
-            background-color: rgba(255, 255, 255, 0.8);
-        }
-
-        .form-row {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-        }
-
-        .form-group {
-            width: 48%;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: 500;
-        }
-
-        .form-group input,
-        .form-group textarea {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            border-bottom: 1px solid #ccc;
-            background-color: transparent;
-            font-size: 16px;
-        }
-
-        .form-group.full-width {
-            width: 100%;
-        }
-
-        /* Subject Options */
-        .subject-options {
-            display: flex;
-            flex-wrap: wrap;
-            margin-top: 10px;
-        }
-
-        .subject-option {
-            display: flex;
-            align-items: center;
-            margin-right: 20px;
-            margin-bottom: 10px;
-        }
-
-        .subject-option input[type="radio"] {
-            margin-right: 5px;
-        }
-
-        /* Custom Radio Button Styling */
-        .radio-container {
-            position: relative;
-            padding-left: 25px;
-            margin-right: 15px;
-            cursor: pointer;
-            font-size: 14px;
-            user-select: none;
-            display: flex;
-            align-items: center;
-        }
-
-        .radio-container input {
-            position: absolute;
-            opacity: 0;
-            cursor: pointer;
-        }
-
-        .checkmark {
-            position: absolute;
-            left: 0;
-            height: 18px;
-            width: 18px;
-            background-color: #eee;
-            border-radius: 50%;
-        }
-
-        .radio-container:hover input ~ .checkmark {
-            background-color: #ccc;
-        }
-
-        .radio-container input:checked ~ .checkmark {
-            background-color: #0f1923;
-        }
-
-        .checkmark:after {
-            content: "";
-            position: absolute;
-            display: none;
-        }
-
-        .radio-container input:checked ~ .checkmark:after {
-            display: block;
-        }
-
-        .radio-container .checkmark:after {
-            top: 6px;
-            left: 6px;
-            width: 6px;
-            height: 6px;
-            border-radius: 50%;
-            background: white;
-        }
-
-        /* Send Button */
-        .send-btn {
-            background-color: #0f1923;
-            color: white;
-            border: none;
-            padding: 12px 30px;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            float: right;
-            margin-top: 20px;
-        }
-
-        .send-btn:hover {
-            background-color: #1c3d5a;
-        }
-
-        /* Responsive styles */
-        @media (max-width: 768px) {
-            .contact-container {
-                flex-direction: column;
-                margin: 20px;
-            }
-
-            .contact-info,
-            .contact-form {
-                width: 100%;
-            }
-
-            .form-row {
-                flex-direction: column;
-            }
-
-            .form-group {
-                width: 100%;
-                margin-bottom: 20px;
-            }
-
-            .nav-links {
-                flex-wrap: wrap;
-            }
-
-            .nav-links li {
-                margin: 5px 10px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="contactUs_styles.css">
 </head>
 <body>
     <!-- Navigation Header -->
