--- a/home.html
+++ b/home.html
@@ -11,11 +11,11 @@
     <div class="hero">
         <nav class="navbar">
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Tours</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Sign In</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="tours.html">Tours</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="signin.html">Sign In</a></li>
             </ul>
             <div class="search-icon"><img src="home_images/search0.svg" alt="search_icon"></div>
         </nav>
