--- a/aboutus.html
+++ b/aboutus.html
@@ -4,26 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Paradise</title>
-    <link rel="stylesheet" href="aboutUs_styles.css">
+    <link rel="stylesheet" href="styles/aboutUs_styles.css">
 </head>
 <body>
     <!-- Navigation Header -->
-    <header>
-        <nav>
-            <a href="#" class="logo">Paradise</a>
-            <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Tours</a></li>
-                <li><a href="#">Reviews</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Book</a></li>
-            </ul>
-            <div class="search-icon">
-                <i class="fa fa-search"></i>
-            </div>
-        </nav>
-    </header>
+    
+    <nav class="navbar">
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tours.html">Tours</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
+            <li><a href="signin.html">Sign In</a></li>
+        </ul>
+        <div class="search-icon"><img src="home_images/search0.svg" alt="search_icon"></div>
+    </nav>
+    <div class="line"></div>
 
     <!-- Hero Section (Full width beach image) -->
     <section class="hero">
