--- a/signin.html
+++ b/signin.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In Page</title>
-    <link rel="stylesheet" href="signin_styles.css">
+    <link rel="stylesheet" href="styles/signin_styles.css">
 </head>
 <body>
     <div class="container">
-        <form class="sign-in-form" action="store_data.php" method="POST">
+        <form class="sign-in-form" action="signin_data.php" method="POST">
             <h2>SIGN IN</h2>
             
             <label for="name">Name</label>
