--- a/aboutus.html
+++ b/aboutus.html
@@ -4,27 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Paradise</title>
-    <link rel="stylesheet" href="styles/aboutUs_styles.css">
+    <link rel="stylesheet" href="assets/styles/aboutUs_styles.css">
 </head>
 <body>
     <!-- Navigation Header -->
     
-    <nav class="navbar">
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tours.html">Tours</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-            <li><a href="contactus.html">Contact Us</a></li>
-            <li><a href="signin.html">Sign In</a></li>
-        </ul>
-        <div class="search-icon"><img src="home_images/search0.svg" alt="search_icon"></div>
-    </nav>
-    <div class="line"></div>
-
-    <!-- Hero Section (Full width beach image) -->
-    <section class="hero">
-        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2073&q=80" alt="Tropical beach" class="hero-image">
-    </section>
+    <div class="hero">
+        <nav class="navbar">
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tours.php">Tours</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="contactus.php">Contact Us</a></li>
+                <li><a href="signin.html">Sign In</a></li>
+            </ul>
+            <div class="search-icon"><img src="assets/home_images/search0.svg" alt="search_icon"></div>
+        </nav>
+        <div class="line"></div>
+    </div>
 
     <!-- About Us Section -->
     <section class="about-section">
