--- a/aboutus.html
+++ b/aboutus.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Paradise</title>
+    <title>Travel Itinerary</title>
     <link rel="stylesheet" href="assets/styles/aboutUs_styles.css">
 </head>
 <body>
     <!-- Navigation Header -->
     
-    <div class="hero">
+    <div class="hero" style="background-image:url('assets/Images/aboutUs_background.jpg'); display:flex; flex-direction:column;">
         <nav class="navbar">
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -24,7 +24,7 @@
     </div>
 
     <!-- About Us Section -->
-    <section class="about-section">
+    <section class="about-section" style="background-image: linear-gradient( 135deg, #FFD3A5 10%, #FD6585 100%);">
         <div class="about-content">
             <div class="about-box">
                 <h2 class="about-title">About Us</h2>
@@ -80,7 +80,8 @@
 
             <!-- Gallery Item 2 -->
             <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1602002418082-dd4e9237734e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80" alt="Infinity pool" class="gallery-image">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWytgcz2m-yOU2cyR_mckkENWYeNxM1HIW1A&s" alt="Infinity pool" class="gallery-image">
+
             </div>
 
             <!-- Gallery Item 3 -->
